--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,8 @@ dependencies {
   testImplementation 'com.h2database:h2:2.3.232'
   testImplementation 'net.datafaker:datafaker:2.4.0'
   testImplementation 'com.tngtech.archunit:archunit:1.3.0'
-  testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  testImplementation "org.springframework.boot:spring-boot-test"
+  testImplementation "org.springframework.boot:spring-boot-test-autoconfigure"
   testImplementation 'org.spockframework:spock-core:2.4-M4-groovy-4.0'
   testImplementation 'org.spockframework:spock-spring:2.4-M4-groovy-4.0'
   testImplementation 'org.apache.groovy:groovy:4.0.23'
