pg advisory locks: from session to transactional

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     properties:
       hibernate:
         show_sql: false
-      javax:
+      jakarta:
         persistence:
           validation:
             mode: none
