--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,6 @@ dependencies {
   implementation 'com.machinezoo.noexception:noexception:1.9.1'
   implementation 'one.util:streamex:0.8.3'
   implementation "org.apache.commons:commons-lang3:3.17.0"
-  implementation "commons-validator:commons-validator:1.9.0"
   implementation "org.springframework.retry:spring-retry"
   implementation "org.springframework.boot:spring-boot-starter-web"
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -32,8 +31,10 @@ dependencies {
   implementation 'com.github.f4b6a3:ulid-creator:5.2.3'
   implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
   implementation 'com.bucket4j:bucket4j-core:8.10.1'
-  implementation "org.sqids:sqids:0.1.0"
   implementation "com.google.guava:guava:33.2.1-jre"
+  implementation ("commons-validator:commons-validator:1.9.0") {
+     exclude module: "commons-logging"
+  }
 
   testImplementation 'com.h2database:h2:2.3.232'
   testImplementation 'net.datafaker:datafaker:2.4.0'
@@ -46,6 +47,7 @@ dependencies {
   testImplementation 'org.apache.groovy:groovy-json:4.0.23'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
+
 
 java {
   toolchain {
