--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies {
   testImplementation 'org.spockframework:spock-spring:2.4-M4-groovy-4.0'
   testImplementation 'org.apache.groovy:groovy:4.0.23'
   testImplementation 'org.apache.groovy:groovy-json:4.0.23'
+  testImplementation 'com.google.guava:guava-testlib:33.3.1-jre'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
