--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
   id 'groovy'
   id 'application'
   id 'org.springframework.boot' version '3.5.0'
+  id "com.github.ben-manes.versions" version "0.52.0"
 }
 
 apply plugin: 'idea'
@@ -29,23 +30,23 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-mail'
   implementation "org.springframework.boot:spring-boot-configuration-processor"
   implementation 'com.github.f4b6a3:ulid-creator:5.2.3'
-  implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
+  implementation 'com.github.ben-manes.caffeine:caffeine:3.2.0'
   implementation 'com.bucket4j:bucket4j-core:8.10.1'
-  implementation "com.google.guava:guava:33.4.5-jre"
+  implementation "com.google.guava:guava:33.4.8-jre"
   implementation("commons-validator:commons-validator:1.9.0") {
     exclude module: "commons-logging"
   }
 
   testImplementation 'com.h2database:h2:2.3.232'
-  testImplementation 'net.datafaker:datafaker:2.4.0'
-  testImplementation 'com.tngtech.archunit:archunit:1.3.0'
+  testImplementation 'net.datafaker:datafaker:2.4.3'
+  testImplementation 'com.tngtech.archunit:archunit:1.4.1'
   testImplementation "org.springframework.boot:spring-boot-test"
   testImplementation "org.springframework.boot:spring-boot-test-autoconfigure"
-  testImplementation 'org.spockframework:spock-core:2.4-M4-groovy-4.0'
-  testImplementation 'org.spockframework:spock-spring:2.4-M4-groovy-4.0'
+  testImplementation 'org.spockframework:spock-core:2.4-M6-groovy-4.0'
+  testImplementation 'org.spockframework:spock-spring:2.4-M6-groovy-4.0'
   testImplementation 'org.apache.groovy:groovy:4.0.24'
   testImplementation 'org.apache.groovy:groovy-json:4.0.24'
-  testImplementation 'com.google.guava:guava-testlib:33.4.5-jre'
+  testImplementation 'com.google.guava:guava-testlib:33.4.8-jre'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
