--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   implementation 'org.springframework.boot:spring-boot-starter-mail'
   implementation "org.springframework.boot:spring-boot-configuration-processor"
-  implementation 'com.github.f4b6a3:ulid-creator:5.2.3'
+  implementation 'com.github.f4b6a3:uuid-creator:6.1.0'
   implementation 'com.github.ben-manes.caffeine:caffeine:3.2.0'
   implementation 'com.bucket4j:bucket4j-core:8.10.1'
   implementation "com.google.guava:guava:33.4.8-jre"
