exclude Mockito transitive dependency

--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ dependencies {
   testImplementation 'com.tngtech.archunit:archunit:1.4.1'
   testImplementation "org.springframework.boot:spring-boot-test"
   testImplementation "org.springframework.boot:spring-boot-test-autoconfigure"
-  testImplementation "org.springframework.boot:spring-boot-starter-data-jpa-test"
+  testImplementation ("org.springframework.boot:spring-boot-starter-data-jpa-test")
   testImplementation "org.springframework.boot:spring-boot-starter-webmvc-test"
 
   testImplementation 'org.spockframework:spock-core:2.4-M6-groovy-4.0'
@@ -51,15 +51,21 @@ dependencies {
   testImplementation 'org.apache.groovy:groovy-json:4.0.28'
   testImplementation 'com.google.guava:guava-testlib:33.4.8-jre'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
 }
 
+// Exclude useless Mockito dependencies added by spring-test-starters
+configurations {
+  implementation {
+    exclude group: "org.mockito"
+  }
+}
 
 java {
   toolchain {
     languageVersion = JavaLanguageVersion.of(25)
   }
 }
-
 
 test {
   def testDurations = [:]
